# kafka_performance

./: .gitignore  Makefile  README.md
docker/: Dockerfile  docker-compose.yml
elk/logstash/pipeline/: logstash.conf
src/: logger.py  logger_queue_handler.py  main.py  pyproject.toml  queue_producer.py  settings.py  simple_producer.py
